--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -18,11 +18,8 @@ body {
 }
 
 h1 {
-    width: 94%;
-    padding-top: 17px;
-    padding-left: 3%;
     font-size: 24px;
-    color: #eeeeee;
+    display: inline;
 }
 
 h2 {
@@ -44,7 +41,6 @@ a {
     text-decoration: none;
     color: #24738e;
 }
-
 table, tr, th, td {
     border: 1px solid #cccccc;
 }
@@ -110,6 +106,25 @@ tr.row0 {
         background-color: #ffffff;
 }
 
-select {
-    height: 30px;
+#header_menu {
+    width: 57%;
+    padding-top: 17px;
+    padding-left: 3%;
+    display: inline-block;
+}
+
+#employee_name {
+    color: #cccccc;
+    width: 36%;
+    padding-right: 3%;
+    text-align: right;
+    display: inline-block;
+}
+
+#header a {
+    color: #eeeeee;
+}
+
+h1 a {
+    color: #eeeeee;
 }
